Add SAXProcessingResource